Fixed colourway field not stretching.

--- a/src/components/DrawerEntry.scss
+++ b/src/components/DrawerEntry.scss
@@ -29,6 +29,12 @@
             }
             .field {
                 flex: auto 1;
+                &-container {
+                    flex-grow: 1;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: stretch;
+                }
             }
             .half {
                 &:first-child {
